fixes the loading of agent